# VideoLingoLite

./: .gitignore  CLAUDE.md  KeytermGroupsSettings.tsx  OneKeyStart.bat  README.md  config.yaml  config.yaml.original  custom_terms.xlsx  install.py  pyproject.toml  requirements.txt  result.prof  st.py  start.bat  start.py  test_br_mapping.py  test_sentence_objects.py
.gemini/tmp/0f3b3ee823b13c5320cdf61bff120ddb58c069874e947056053fe50c3b404b6e/: COMMIT_EDITMSG
api/: main.py  state_manager.py
api/models/: schemas.py
api/routes/: config.py  download.py  files.py  tasks.py  terms.py  test.py
batch/: OneKeyBatch.bat  OneKeyGenerateTasks.bat  README.md
batch/utils/: batch_processor.py  generate_tasks.py  settings_check.py  video_processor.py
core/: _1_ytdlp.py  _2_asr.py  _3_1_5_correct_terms.py  _3_1_split_by_punctuation.py  _3_1_split_nlp.py  _3_2_hotword.py  _3_2_split_meaning.py  _3_3_split_meaning.py  _3_llm_sentence_group.py  _3_llm_sentence_split.py  _4_1_summarize.py  _4_2_translate.py  _5_split_sub.py  _6_gen_sub.py  _7_sub_into_vid.py  __init__.py  prompts.py  translate_lines.py
core/asr_backend/: audio_preprocess.py  custom_asr.py  gemini.py  parakeet_local.py  qwen3_asr.py  whisperX_local.py
core/spacy_utils/: __init__.py  load_nlp_model.py  split_by_comma.py  split_by_connector.py  split_by_mark.py  split_by_pause.py  split_long_by_root.py
core/st_utils/: download_video_section.py  imports_and_utils.py  sidebar_setting.py  upload_media_section.py
core/utils/: __init__.py  ask_gpt.py  cache_utils.py  config_manager.py  config_utils.py  decorator.py  models.py  onekeycleanup.py  progress_callback.py  sentence_splitting.py  sentence_tools.py  vad_processor.py  vocal_separator.py
docs/plans/: 2025-01-13-hotword-groups-design.md  2025-01-20-chunk-sentence-implementation.md  2025-01-20-chunk-sentence-object-refactoring.md
example/: aligner.py  qwen_transcriber.py
scripts/: download_qwen_models.py
translations/: README.es.md  README.fr.md  README.ja.md  README.ru.md  README.zh.md  en.json  es.json  fr.json  ja.json  ru.json  zh-CN.json  zh-HK.json
webui/: README.md  index.html
webui/js/: app.js  state.js  utils.js
webui/js/components/: confirmDialog.js  fileList.js  fileUpload.js  modal.js  settings.js  terms.js  youtubeDownload.js
webui/styles/: base.css  components.css  layout.css
