[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "VideoLingoLite"
version = "3.0.0"
description = "A tool for video language processing and subtitle generation"
readme = "README.md"
license = {file = "LICENSE"}
authors = [
    {name = "Eclipse005"}
]
requires-python = "==3.10.*"
dependencies = [
    # 音频处理 - 仅列出包名
    "torch",
    "torchaudio",
    "librosa==0.11.0",
    "pydub==0.25.1",
    "whisperx==3.7.4",
    # 数据处理 - 必须降级以适配 WhisperX (<2.3.0)
    "pandas==2.2.3",
    # AI & API
    "openai==2.9.0",
    "requests==2.32.5",
    # 界面与工具
    "streamlit==1.52.1",
    "openpyxl==3.1.5",
    "PyYAML==6.0.3",
    "ruamel.yaml==0.18.16",
    "json-repair==0.54.2",
    "autocorrect-py==2.14.0",
    "pysrt>=1.1.2",
]

[project.optional-dependencies]
dev = [
    "uv>=0.2.0",
]



[project.urls]
Homepage = "https://github.com/eclipse005/VideoLingoLite"
Repository = "https://github.com/eclipse005/VideoLingoLite.git"

[tool.setuptools.packages.find]
where = ["."]
include = ["core*", "batch*", "translations*"]

[tool.uv]
# 默认索引：用于所有其他非 PyTorch 的包
index-url = "https://pypi.tuna.tsinghua.edu.cn/simple/"

# ❗ 关键修正：确保 CUDA 和 CPU 平台的标记是互斥的。
[tool.uv.sources]
torch = [
  # 1. CUDA Index: Windows (any arch) OR Linux (x86_64)
  { index = "pytorch-cuda", marker = "sys_platform == 'win32' or (sys_platform == 'linux' and platform_machine == 'x86_64')" },
  
  # 2. CPU Index: macOS (any arch) OR (非 x86_64 且非 Windows 的机器)
  { index = "pytorch-cpu", marker = "sys_platform == 'darwin' or (platform_machine != 'x86_64' and sys_platform != 'win32')" },
]
torchaudio = [
  # 1. CUDA Index: Windows (any arch) OR Linux (x86_64)
  { index = "pytorch-cuda", marker = "sys_platform == 'win32' or (sys_platform == 'linux' and platform_machine == 'x86_64')" },
  
  # 2. CPU Index: macOS (any arch) OR (非 x86_64 且非 Windows 的机器)
  { index = "pytorch-cpu", marker = "sys_platform == 'darwin' or (platform_machine != 'x86_64' and sys_platform != 'win32')" },
]


# 定义 CUDA 12.8 专用索引
[[tool.uv.index]]
name = "pytorch-cuda"
url = "https://download.pytorch.org/whl/cu128"
explicit = true 

# 定义 CPU 专用索引
[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true
